--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,4 +1,7 @@
 @import 'tailwindcss';
+@theme {
+  --font-sans: InterVariable, sans-serif;
+}
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
